kyverno/policy-reporter/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: policy-reporter-gateway
  namespace: kyverno
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - policy-check.local.io
---
