kyverno/policy-reporter/virtualserver.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: policy-reporter-virtualservice
  namespace: kyverno
spec:
  hosts:
    - policy-check.local.io
  gateways:
    - policy-reporter-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: policy-reporter-ui.kyverno.svc.cluster.local
            port:
              number: 8080
---
